# network-monitor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  README.md  network_monitor.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.py  test_bandwidth_throttling.py  version2-changes.md
.github/workflows/: ci.yml
app/: __init__.py  controller.py  dependencies.py  events.py  shortcuts.py  sparkline_renderer.py  timer.py
app/views/: __init__.py  graph_window.py  icons.py  menu_builder.py
assets/: NetworkMonitor.icns
config/: __init__.py  constants.py  exceptions.py  logging_config.py  singleton.py  subprocess_cache.py
monitor/: __init__.py  bandwidth_monitor.py  connection.py  connection_tracker.py  dns_monitor.py  geolocation.py  issues.py  metrics_exporter.py  network.py  scanner.py  speed_test.py  traffic.py  utils.py
scripts/: create_icon.py
service/: __init__.py  launch_agent.py
storage/: __init__.py  json_store.py  settings.py  sqlite_store.py
tests/: __init__.py  conftest.py  mocks.py  test_app.py  test_bandwidth_monitor.py  test_config.py  test_connection.py  test_connection_tracker.py  test_dependencies.py  test_dns_monitor.py  test_geolocation.py  test_icons.py  test_integration.py  test_issues.py  test_json_store.py  test_launch_agent.py  test_menu_builder.py  test_network.py  test_scanner.py  test_settings.py  test_sqlite_store.py  test_traffic.py
