[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-monitor"
version = "1.7.0"
description = "A macOS menu bar application for monitoring network traffic"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Johannes Mahne"}
]
keywords = ["network", "monitor", "macos", "menu-bar", "traffic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "rumps>=0.4.0",
    "psutil>=5.9.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "types-psutil>=5.9.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
network-monitor = "network_monitor:main"

[project.urls]
Homepage = "https://github.com/JohannesMahne/network-monitor"
Repository = "https://github.com/JohannesMahne/network-monitor"

[tool.setuptools.packages.find]
where = ["."]
include = ["monitor*", "storage*", "service*", "config*", "app*"]

# ============================================================================
# Testing
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -W ignore::DeprecationWarning"
markers = [
    "unit: mark test as a unit test (fast, isolated)",
    "integration: mark test as an integration test",
    "slow: mark test as slow running",
    "macos_only: mark test as requiring macOS",
]
filterwarnings = [
    "ignore::DeprecationWarning:matplotlib.*:",
    "ignore::DeprecationWarning:pyparsing.*:",
    "ignore:.*deprecated.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["monitor", "storage", "service", "config", "app"]
omit = ["*/tests/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 65
show_missing = true
skip_covered = false

# ============================================================================
# Code Formatting - Black
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

# ============================================================================
# Linting - Ruff
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "SIM108",  # use ternary operator (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR", "PLC0415", "PTH123", "B007"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["monitor", "storage", "service", "config", "app"]

# ============================================================================
# Type Checking - MyPy
# ============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "rumps.*",
    "AppKit.*",
    "Foundation.*",
    "objc.*",
]
ignore_missing_imports = true
